# ChangeLog for dev-haskell/hxt-regex-xmlschema
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hxt-regex-xmlschema/ChangeLog,v 1.2 2012/06/02 08:47:49 gienah Exp $

*hxt-regex-xmlschema-9.0.4 (02 Jun 2012)

  02 Jun 2012; Mark Wright <gienah@gentoo.org>
  +hxt-regex-xmlschema-9.0.4.ebuild:
  Bump hxt-regex-xmlschema to 9.0.4

*hxt-regex-xmlschema-9.0.1 (04 Dec 2011)

  04 Dec 2011; Sergei Trofimovich <slyfox@gentoo.org>
  +hxt-regex-xmlschema-9.0.1.ebuild,
  +files/hxt-regex-xmlschema-9.0.1-ghc-7.2.patch, +metadata.xml:
  Initial version. A regular expression library for W3C XML Schema regular
  expressions (dev-haskell/hxt depend)
