@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hxt-regex-xmlschema/hxt-regex-xmlschema-9.0.1.ebuild,v 1.1 2011/12/04 16:55:09 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hxt-regex-xmlschema/hxt-regex-xmlschema-9.0.1.ebuild,v 1.2 2012/09/12 15:16:12 qnikst Exp $
 
 # ebuild generated by hackport 0.2.13
 
@@ -11,7 +11,7 @@ inherit base haskell-cabal
 
 DESCRIPTION="A regular expression library for W3C XML Schema regular expressions"
 HOMEPAGE="http://www.haskell.org/haskellwiki/Regular_expressions_for_XML_Schema"
-SRC_URI="http://hackage.haskell.org/packages/archive/${PN}/${PV}/${P}.tar.gz"
+SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
