@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hxt-regex-xmlschema/hxt-regex-xmlschema-9.0.4.ebuild,v 1.1 2012/06/02 08:47:48 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hxt-regex-xmlschema/hxt-regex-xmlschema-9.0.4.ebuild,v 1.2 2012/09/12 15:16:12 qnikst Exp $
 
 EAPI=4
 
@@ -11,7 +11,7 @@ inherit haskell-cabal
 
 DESCRIPTION="A regular expression library for W3C XML Schema regular expressions"
 HOMEPAGE="http://www.haskell.org/haskellwiki/Regular_expressions_for_XML_Schema"
-SRC_URI="http://hackage.haskell.org/packages/archive/${PN}/${PV}/${P}.tar.gz"
+SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
