@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/hxt-regex-xmlschema
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hxt-regex-xmlschema/ChangeLog,v 1.2 2012/06/02 08:47:49 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/hxt-regex-xmlschema/ChangeLog,v 1.3 2012/09/12 15:16:12 qnikst Exp $
+
+  12 Sep 2012; Alexander Vershilov <qnikst@gentoo.org>
+  hxt-regex-xmlschema-9.0.1.ebuild, hxt-regex-xmlschema-9.0.4.ebuild:
+  move dev-haskell/hxt-regex-xmlschema/hxt-regex-xmlschema-9.0.1.ebuild ebuild
+  to mirror://hackage
 
 *hxt-regex-xmlschema-9.0.4 (02 Jun 2012)
 
@@ -15,4 +20,3 @@
   +files/hxt-regex-xmlschema-9.0.1-ghc-7.2.patch, +metadata.xml:
   Initial version. A regular expression library for W3C XML Schema regular
   expressions (dev-haskell/hxt depend)
-
